# bunker

bunker/: README.md  flake.nix  test.py
bunker/server/: login.py  register.py  server.py
bunker/tpm-ws/: Cargo.toml
bunker/tpm-ws/migrations/2024-04-01-163734_sealed_keys/: down.sql  up.sql
bunker/tpm-ws/migrations/2024-04-02-041441_software_keys/: down.sql  up.sql
bunker/tpm-ws/migrations/2024-04-05-225550_encrypted_software_keys/: down.sql  up.sql
bunker/tpm-ws/src/: db.rs  main.rs  models.rs  no_tpm.rs  pkcs11.rs  schema.rs  secrets.rs  software.rs  tpm.rs
